tests/errors/semantic/blocking/OPENMP_simd_check.py
# pylint: disable=missing-function-docstring, missing-module-docstring


#$ omp parallel

#$ omp simd
x = 50

#$ omp end parallel

